					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2011/07/11
	* Rev. 14901 Lots of updates. :] [L0ne_W0lf]
	- Added several missing items to the item database, updated others.
	- Raised level 10 Dec. AGI to be level 48, when used by mobs.
	- Added missing mercenaries to the mercenary DB, and skills.
	- Added missing monster_chat_db entries for Nydhoggr's Shadow.
	- Added Brasilis pets to the pet DB, these pets are unhatchable on purpose.
	- Added additional quests to the quest_db, mostly for RE.
2011/04/16
	* Rev. 14797 Added Archangel Wings (2573) and their respective Box (16998) item based on client-side kRO description. [Ai4rei]
2011/03/19
	* Rev. 14748 Fixed Beast Strafing (HT_POWER) SP requirement as provided by Playtester (bugreport:4675). [Gepard]
2011/03/06
	* Rev. 14732 Added Universal Catalog Silver, Gold and Bronze and their respective boxes. [Ai4rei]
	- Updated packet info related to search store info.
2011/02/19
	* Rev. 14713 Database updates required by buying store system implementation. [Ai4rei]
	- Added database of items, that can be sold to a buying store (item_buyingstore.txt).
	- Added items Buy_Stall_Permit (6377) and Shabby_Purchase_Street_Stall_License (12548).
	- Updated packet database with buying store related packets.
	- Added skill 'Open Buying Store' (ALL_BUYING_STORE).
2011/02/06
	* Rev. 14697 Added the missing restricted skills to zone 6 for Endless Tower. (bugreport:4707) [L0ne_W0lf]
	* Adjusted the rates for item using bAddEffOnSkill bonus. 
2011/01/23
	* Rev. 14679 Updated Aegis NPC ID constants from current npcidentity.lub (bugreport:4706). [Ai4rei]